--- a/lib/box/main.css
+++ b/lib/box/main.css
@@ -1,3 +1,109 @@
-html{
-  background-color:red;
+
+body {
+  background: #FDD761;
+  font-family: 'Lucida Sans Unicode', 'Arial', serif;
+  color: white;
+}
+
+header .btn {
+  text-transform: uppercase;
+}
+
+header a:hover, .about a:hover {
+  background: #fcc316;
+}
+
+header .btn, .services {
+  margin-top: 100px;
+}
+
+header {
+  padding: 80px 0 150px;
+}
+
+header {
+  background: url("https://unsplash.it/1080/720/?image=377") no-repeat fixed center / cover;
+  text-align: center;
+}
+
+
+/* GENERAL STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+
+
+
+
+
+
+
+
+
+/* HEADER STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+
+
+
+
+
+
+
+/* SERVICES STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+
+
+
+
+
+/* ABOUT STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.about {
+  background: url("https://unsplash.it/1080/720/?image=349") no-repeat fixed center / cover;
+  color: black;
+}
+
+.about .one-third, 
+.about .two-thirds {
+  background: white;
+  background: rgba(255,255,255,.3);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.about .one-third {
+  margin-top: 20px;
+}
+
+.about a {
+  margin-top: 10px;
+}
+
+.about ul {
+  margin-bottom:18px;
+}
+
+.about h3:after, .contact h3:after {
+  border-color: black;
+}
+
+.about .center {
+  text-align: center;
+}
+
+.about .bottom {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+
+.about .one-third a {
+  margin: 10px auto;
+  width: 50%;
+  display: block;
+} 
+
+.about .two-thirds p:last-child {
+  margin-bottom: 0;
 }
